add tests for all routes
